# Network-Security-Monitor

./: .gitignore  LICENSE  readme.md  troubleshooting.md
app/: .gitignore  docker-compose.yml  filebeat.yml  promtail-config.yml
app/corr-engine/: CMakeLists.txt  Dockerfile
app/corr-engine/rules/: rules.yaml
app/corr-engine/src/: corr_engine.cpp
app/grafana/: grafana.ini
app/grafana/provisioning/: dashboard-provider.yaml
app/grafana/provisioning/dashboards/: executive-dashboard.json  loki-findings-dashboard.json  soc-analyst-dashboard.json  technical-metrics-dashboard.json
app/grafana/provisioning/datasources/: loki-datasource.yaml
app/loki/: local-config.yaml  loki-config.yaml
docs/: troubleshooting.md
